Added context (with property generation), fixed some bugs

--- a/Message.Core/Message.Core.csproj
+++ b/Message.Core/Message.Core.csproj
@@ -5,11 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Context" />
+      <ProjectReference Include="..\Message.Database\Message.Database.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Message.Database\Message.Database.csproj" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
     </ItemGroup>
 
 </Project>
