--- a/Message.API/appsettings.json
+++ b/Message.API/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppOptions": {
+    "SecretKey": "pmT9AMCtFCqZR2Ar2W6JEgzMsDBSR62t7aSFNSLKHnGJ3f2Ru4"
+  },
+  "ConnectionStrings": {
+    "Default" : "User ID=root;Password=root;Host=localhost;Port=5432;Database=habrdb;"
+  }
+
 }
