--- a/Message.Common/Message.Common.csproj
+++ b/Message.Common/Message.Common.csproj
@@ -5,11 +5,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Enums" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
+      <PackageReference Include="AutoMapper" Version="11.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.13" />
     </ItemGroup>
 
 </Project>
