--- a/Message.Core/Message.Core.csproj
+++ b/Message.Core/Message.Core.csproj
@@ -9,7 +9,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
+      <PackageReference Include="AutoMapper" Version="11.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.13" />
     </ItemGroup>
 
 </Project>
