--- a/Message.API/nlog.config
+++ b/Message.API/nlog.config
@@ -10,15 +10,15 @@
     <targets>
         <target type="File" name="allfile" fileName="C:\Users\mpanov\RiderProjects\repos\sixgram_messagemicroarchi\logs\logs-all-${shortdate}.log"
                 layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${uppercase:${level}}|${logger}|
-                ${message} ${exception:format=tostring}" />
+                ${messageService} ${exception:format=tostring}" />
 
         <target type="File" name="ownFile-web" fileName="C:\Users\mpanov\RiderProjects\repos\sixgram_messagemicroarchi\logs\logs-own-${shortdate}.log"
                 layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${uppercase:${level}}|${logger}|
-                ${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|
+                ${messageService} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|
                 ${callsite}| body: ${aspnet-request-posted-body}" />
 
         <target type="Console" name="lifetimeConsole" layout="${level:truncate=4:tolower=true}\: ${logger}[0]${newline}      
-        ${message}${exception:format=tostring}" />
+        ${messageService}${exception:format=tostring}" />
     </targets>
 
     <rules>
