--- a/Message.API/appsettings.json
+++ b/Message.API/appsettings.json
@@ -10,6 +10,11 @@
   "AppOptions": {
     "SecretKey": "pmT9AMCtFCqZR2Ar2W6JEgzMsDBSR62t7aSFNSLKHnGJ3f2Ru4"
   },
+  
+  "BaseAddress": {
+    "FileStorage" : "",
+    "AuthService" : ""
+  },
   "ConnectionStrings": {
     "Default" : "User ID=root;Password=root;Host=localhost;Port=5432;Database=habrdb;"
   }
