Added StatusCodes, rewrite services Chat and Message

--- a/Message.API/appsettings.json
+++ b/Message.API/appsettings.json
@@ -12,11 +12,11 @@
   },
   
   "BaseAddress": {
-    "FileStorage" : "",
+    "FileStorage" : "http://localhost:5000/api/v1/task",
     "AuthService" : ""
   },
   "ConnectionStrings": {
-    "Default" : "User ID=root;Password=root;Host=localhost;Port=5432;Database=habrdb;"
+    "Default" : "User ID=habrpguser;Password=pgpwd4habr;Host=localhost;Port=5432;Database=MessagesMicroservice;"
   }
 
 }
